actually fixed the chrome blurriness issue

--- a/general.css
+++ b/general.css
@@ -29,7 +29,7 @@
     color: var(--color-text);
 }
 
-*img{
+img{
   image-rendering: -webkit-optimize-contrast;
 }
 
